session-gateway/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-proxy-deployment
  namespace: part-rde
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-proxy
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        update: 1c1ae58d51ef4d230372aafb2c4c6b6d
      labels:
        app: kube-proxy
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - name: kube-proxy
        image: amdp-registry.skamdp.org/mydev-ywyi/kube-proxy:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
