session-gateway/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-proxy-service
spec:
  selector:
    app: kube-proxy
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
